# open-orpheus

./: .editorconfig  .gitignore  .npmrc  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_en.md  Cargo.toml  README.md  README_en.md  eslint.config.ts  forge.config.ts  nativemodules.json  package.json  pnpm-lock.yaml  start_ui_module.js  tsconfig.json  versions.json  vite.main.config.ts  vite.renderer.config.ts
.copr/: Makefile
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
gui/: components.json  package.json  svelte.config.ts
gui/src/: app.d.ts
modules/: .eslintrc.json
modules/database/: .gitignore  README.md  package.json
modules/lifecycle/: package.json
modules/ui/: package.json
modules/ui/crates/@open-orpheus/ui/: Cargo.toml
modules/ui/crates/@open-orpheus/ui/src/: app.rs  lib.rs  napi.rs  resource.rs  skin.rs
modules/ui/crates/@open-orpheus/ui/src/app/: base64_loader.rs  fonts.rs  inner.rs  menu.rs  pack_loader.rs  request.rs  wrappers.rs
modules/ui/crates/@open-orpheus/ui/src/components/: menu.rs
modules/ui/crates/@open-orpheus/ui/src/components/menu/: draw.rs  popup.rs  shared.rs  structs.rs  types.rs  wayland.rs
modules/ui/crates/@open-orpheus/ui/src/export/: app.rs
modules/window/: README.md  package.json
modules/window/crates/window/: Cargo.toml
modules/window/crates/window/src/: lib.rs  linux.rs
packaging/: options.json  options.ts
scripts/: README.md  _loader.ts  build-modules.mts  build-srpm.mts  start_ui_module.ts
src/: CallDispatcher.ts  constants.ts  main.ts  preload.ts
src/main/: ui.ts  (+17 more)
(+72 files in other folders)
