[package]
name = "ui"
version = "0.1.0"
description = "Native UI module for Open Orpheus"
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui-winit = "0.33.3"
neon = "1.1"
oneshot = { version = "0.2.1", features = ["async"] }
smol = "2.0.2"
winit = "0.30.12"
